src/test/success/if_else_statement_if.egern
var a = 3;
print(a);
if (a == 3) {
    print(1);
} else {
    print(0);
}
print(a);
