src/test/fail/redeclaring_variable_as_function_fail.egern
var a = 3;
func a(): void {
    return;
}
print(a);
